welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: not found: value L
    for (i <- 0 to L-1){
                   ^Diagonal:8: error: not found: value H
      for (j <- 0 to H-1){
                     ^Diagonal:9: error: not found: value L
        setPos(L-1-i,L-1-i)
               ^Diagonal:9: error: not found: value L
        setPos(L-1-i,L-1-i)
                     ^